--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -309,7 +309,7 @@ footer{
     width: 40px;height:40px;float: left;padding: 25% 0;margin: 0 30px;
 }
 .imgA_C>img{
-    width: 100%;transform: rotate(-90deg);
+    width: 100%;
 }
 .imgA_R{
     width: 45%;height: auto;float: right;padding: 10% 0;
@@ -392,7 +392,7 @@ footer{
     width:124px;height:124px;background:url("../imgServe/icon7.png");background-size: cover;margin:0 auto;
 }
 .card7Jian{
-    width:40px;height:40px;background: url("../imgServe/write.png");background-size: cover;float: left;margin-top:45%;transform: rotate(-90deg);margin-left:-10px;position: relative;margin-right:-10px;
+    width:40px;height:40px;background: url("../imgServe/white_h.png");background-size: cover;float: left;margin-top:45%;margin-left:-10px;position: relative;margin-right:-10px;
 }
 .card71{
     width:10%;height:auto;float:left;padding:100px 0;font-size: 28px;color:#fff;border:2px solid #fff;line-height: 32px;margin-top: 15%;text-align: center;
@@ -469,8 +469,10 @@ footer{
     width: 100%;
 }
 .card9Jian{
-    width:40px;height:40px;background: url("../imgServe/write.png");background-size: cover;float: left;margin-top:20%;transform: rotate(-90deg);margin-left:4%;
-
+    width:40px;height:40px;float: left;margin-top:20%;margin-left:4%;
+}
+.card9Jian>img{
+    width:100%;
 }
 .card92{
     width: 40%;height: auto;float: left;margin-left: 4%;border: 2px solid #fff;padding: 10px;
@@ -489,8 +491,17 @@ footer{
 .num10{
     width:98px;height:102px;background: url("../imgServe/num10.png");background-size: cover;position: absolute;top:-30px;right:0;
 }
+.card10Box{
+    display: none;
+}
+.card10Img{
+    width: 100%;height:auto;margin:56px auto 0 auto;display: block;
+}
+.card10Img>img{
+    width: 100%;
+}
 .card10_1{
-    width: 60%;height:auto;margin:56px auto 0 auto;
+    width: 70%;height:auto;margin:56px auto 0 auto;
 }
 .card10_1>img{
     width: 100%;
@@ -551,14 +562,14 @@ footer{
 .card5_1,.card5_2,.card5_3{display: block}
 .phoneCard5_1,.phoneCard5_2,.phoneCard5_3,.phoneImgA,.phoneImgB,.phoneImgC{display: none}
 @media screen and (max-width:992px){
-    .topBox,.card5_1,.card5_2,.card5_3,.nav{display: none}
+    .topBox,.card5_1,.card5_2,.card5_3,.nav,.card10Img{display: none}
     .mainBox{display: none}
     footer{display: none}
     .imgCbox{position: static}
     .cInner1{
         display: none;
     }
-    .callP,.phoneCard5_1,.phoneCard5_2,.phoneCard5_3{
+    .callP,.phoneCard5_1,.phoneCard5_2,.phoneCard5_3,.card10Box{
         display:block;
     }
     .bannerboxP{
