--- a/public/css/yindao.css
+++ b/public/css/yindao.css
@@ -8,7 +8,7 @@ a{
     display: none;
 }
 .topLogo{
-    width: 100%;height:auto;position:fixed;top:0;left:0;
+    width: 100%;height:auto;position:relative;top:0;left:0;
 }
 .topLogo>img{
     width:100%;
