--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -77,7 +77,7 @@ a{
     font-size: 18px;color: #fff;text-shadow: 0 2px 2px #000;
 }
 .forms{
-    width:49.67%;height:40px;border: 1px solid #fff;background: rgba(255,255,255,0.92);position: absolute;top:60%;left:50%;margin-left: -24.835%;border-radius: 5px;box-shadow:0 1px 3px #999 inset;
+    width:45.67%;height:40px;border: 1px solid #fff;background: rgba(255,255,255,0.92);position: absolute;top:60%;left:50%;margin-left: -22.835%;border-radius: 5px;box-shadow:0 1px 1px #999 inset;padding: 1px;
 }
 .inputs{
     width: 90%;height: 100%;font-size: 16px;color:#000;padding: 10px;border: 0;background: rgba(255,255,255,0);
@@ -92,7 +92,7 @@ a{
     color:#ccc;padding: 0 45%;
 }
 .button{
-    width: 10%;height: 100%;background:#fff url("../img/buttonWeb.png") no-repeat;float: right;background-position: center;background-size: 40%;
+    width: 9%;height: 95%;background:#fff url("../img/buttonWeb.png") no-repeat;float: right;background-position: center;background-size: 40%;margin-top: 1px;
 }
 .button:hover{
     cursor:pointer;
