--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -740,16 +740,16 @@ footer{
         width: 100%;height: 128px;background: rgba(255,255,255,0.5);padding: 20px 30px;position: relative;
     }
     .phoneInput{
-        width: 100%;height:100%;border: 0;border-radius: 58px;padding: 0 100px;font-size: 36px;color:#8e8e93
+        width: 100%;height:100%;border: 0;border-radius: 58px;padding: 0 100px;font-size: 36px;color:#8e8e93;text-align: center;
     }
     .phoneInput:focus{
         outline:none;
     }
     .placeBox{
-        width: 50%;height:60%;position: absolute;top:25px;left:50%;margin-left: -25%;
+        width: 10%;height:60%;position: absolute;top:25px;left:28%;
     }
     .placeaIcon{
-        width: 18%;height: auto;float: left;padding: 13px 0;
+        width: 100%;height: auto;float: left;padding: 13px 0;
     }
     .placeaIcon>img{
         width: 50%;
