--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -743,7 +743,7 @@ footer{
         width: 100%;height:100%;border: 0;border-radius: 58px;padding: 0 100px;font-size: 36px;color:#8e8e93;text-align: center;
     }
     .phoneInput:focus{
-        outline:none;
+        outline:none;text-align: left;
     }
     .placeBox{
         width: 10%;height:60%;position: absolute;top:25px;left:28%;
