--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -722,16 +722,16 @@ footer{
         width:40%;height:auto;position: absolute;top:125px;right:0;z-index: 99;background: rgba(255,255,255,0.9);display: none;
     }
     .navP li{
-        width:100%;height:88px;border-bottom:1px solid #d2d2d2;padding:22px 34px;
+        width:100%;height:105px;border-bottom:1px solid #d2d2d2;padding:22px 34px;
     }
     .iconP{
-        width:44px;height:44px;float: left;
+        width:54px;height:54px;float: left;
     }
     .iconP>img{
         width:100%;
     }
     .navWord{
-        width:60%;height:44px;float: left;margin-left:36px;text-align: left;line-height: 44px;font-size:1.75em;color:#333;
+        width:60%;height:54px;float: left;margin-left:36px;text-align: left;line-height: 54px;font-size:34px;color:#333;
     }
     .beginP{
         width:252px;height:88px;position: absolute;top:70%;left:50%;margin-left:-126px;background: url("../imgPhone/rectP.png");font-size:2em;text-align: center;line-height: 88px;color:#6cc1fb;
