--- a/public/css/ex.css
+++ b/public/css/ex.css
@@ -23,8 +23,9 @@
     width: 100%;
 }
 .yingdao{
-    width: 40%;height: auto;position: absolute;top:0;right:5%;display:none;
+    width: 40%;height: auto;position: fixed;top:25px;right:5%;display:none;z-index: 99;
 }
+.yingdao img{width: 100%}
 .bannertitle{
     display:block;width: 90%;height:auto;font-size: 22px;margin-top:3%;margin-left:5%;
     line-height: 26px;color:#060606;font-weight: bold;
