--- a/public/css/search.css
+++ b/public/css/search.css
@@ -156,6 +156,9 @@
 .wait{
     width: 46.88%;height:auto;margin:30px auto;font-size: 15px;color: #8e8e8e;text-align: left;display: none;
 }
+.wait1{
+    width: 46.88%;height:auto;margin:30px auto;font-size: 15px;color: #8e8e8e;text-align: left;display: none;
+}
 .errorBox{
     width: 46.88%;height:auto;margin:40px auto;display: none;
 }
