--- a/public/css/indexP.css
+++ b/public/css/indexP.css
@@ -114,7 +114,7 @@ a{
     width:28%;height:2px;margin:18px auto 14px auto;background:#6cc1fb ;
 }
 .mainWord{
-    width:100%;height:auto;margin:0 auto;font-size: 16px;color:#323232;text-indent: 2em;line-height: 26px;text-align: center;
+    width:100%;height:auto;margin:0 auto;font-size: 16px;color:#323232;line-height: 26px;text-align: center;
 }
 .iconBox{
     width:100%;height:auto;margin:60px auto 0 auto;overflow: hidden;
