--- a/public/css/indexQidian.css
+++ b/public/css/indexQidian.css
@@ -24,10 +24,11 @@ a{text-decoration: none}
 .imgboxs>div:first-child{margin-left: 0}
 .bigImg{width: 100%;height:100px;margin-top:15px;}
 .bigImg>img{width:100%}
-.jiantou{width:15px;height:auto;position: absolute;right:4%;top:20px}
+.jiantou{width:15px;height:auto;position: absolute;right:4%;top:20px;display: none}
 .jiantou>img{width:100%}
 @media screen and (max-width: 992px){
     .title{left:40%}
+    .jiantou{display: block;}
      .navBox{height:50px;overflow:hidden}
     .navBox li{padding: 0 6% 0 0}
 }
