--- a/public/css/indexQidian.css
+++ b/public/css/indexQidian.css
@@ -24,7 +24,7 @@ a{text-decoration: none}
 .imgboxs>div:first-child{margin-left: 0}
 .bigImg{width: 100%;height:100px;margin-top:15px;}
 .bigImg>img{width:100%}
-.jiantou{width:15px;height:15px;position: absolute;right:4%;top:20px;}
+.jiantou{width:15px;height:15px;position: absolute;right:4%;top:20px;display: none}
 .jiantou>img{width:100%}
 .load{display:block;font-size: 16px;color: #9b9b9b;margin:60px auto;width: 100%;text-align: center}
 .loadMord{width: 92%;height:44px;margin: -30px auto 0 auto;background: #f5f5f5;font-size:14px;color:#9b9b9b;text-align: center;line-height: 44px;display: none}
