--- a/public/css/indexQidian.css
+++ b/public/css/indexQidian.css
@@ -1,5 +1,6 @@
 *{padding:0;margin:0;list-style: none}
 a{text-decoration: none}
+img{display: block;}
 .top{width:100%;height:44px;background: #0091fa;position:fixed;top:0}
 .title{width:76px;height:auto;position: absolute;top:12px;left:4%}
 .search{width:20px;height:auto;position: absolute;top:12px;right:4%}
@@ -13,7 +14,7 @@ a{text-decoration: none}
 .mainBox a li{width:100%;height:auto;overflow: hidden;padding: 15px 0;border-bottom: 1px solid #dcdcdc}
 .imgbox{width: 110px;height:auto;float: left;margin-right:3%}
 .imgbox img{width: 100%}
-.wordBox{width:calc(97% - 110px);height:auto;float: left;}
+.wordBox{width:calc(97% - 112px);height:auto;float: left;}
 .titleWord{display:block;width:100%;height:auto;font-size: 17px;color:#323232;line-height: 22px;}
 .fromBox{width: 100%;height:auto;overflow: hidden;margin-top:16px}
 .from{font-size: 12px;color:#9b9b9b;float:left}
