--- a/public/css/indexQidian.css
+++ b/public/css/indexQidian.css
@@ -20,8 +20,8 @@ img{display: block;}
 .from{font-size: 12px;color:#9b9b9b;float:left}
 .time{font-size: 12px;color:#9b9b9b;float: left;margin-left:5%}
 .imgboxs{width: 100%;height:auto;overflow: hidden;margin-top:15px}
-.imgboxs>div{width:32%;height:auto;float:left;margin-left: 2%}
-.imgboxs>div>img{width:100%}
+.imgboxs>div{width:auto;height:220px;float:left;margin-left: 2%}
+.imgboxs>div>img{height:100%}
 .imgboxs>div:first-child{margin-left: 0}
 .bigImg{width: 100%;height:100px;margin-top:15px;}
 .bigImg>img{width:100%}
@@ -39,4 +39,6 @@ img{display: block;}
     /*.navBox li{width: 13%}*/
     .navBox{height:50px;overflow:hidden}
     .navBox li{padding: 0 5% 0 0}
+    .imgboxs>div{width: 32%;height:auto;}
+    .imgboxs>div>img{width:100%}
 }
