--- a/public/css/ex.css
+++ b/public/css/ex.css
@@ -1,6 +1,9 @@
 *{
     margin:0;padding:0;list-style: none;font-weight: normal;box-sizing: border-box;
 }
+html{
+    font-size: 62.5%;
+}
 .header{
     width: 100%;height: 50px;background:#999;position: relative;
 }
@@ -27,11 +30,11 @@
 }
 .yingdao img{width: 100%}
 .bannertitle{
-    display:block;width: 90%;height:auto;font-size: 22px;margin-top:3%;margin-left:5%;
+    display:block;width: 90%;height:auto;font-size: 22px;margin-top:3%;margin-left:3%;
     line-height: 26px;color:#060606;font-weight: bold;
 }
 .bannertime{
-    width: 90%;height:16px;margin-left:5%;margin-top:21px;
+    width: 90%;height:16px;margin-left:3%;margin-top:21px;
 }
 .date{
     display: block;float:left;font-size: 16px;color:#808080;
@@ -46,14 +49,14 @@
     width: 90px;height: 100%;margin-left:20px;color:red;
 }
 .cardbox{
-    width: 100%;height:auto;position: relative;top: 23px;padding-bottom: 30px;
+    width: 100%;height:auto;position: relative;padding-bottom: 30px;
 }
 .card1{
-    width: 96%;height:auto;padding:0px 10px;font-size:20px;margin:0 auto;background:#fff;font-weight: bold;
+    width: 94%;height:auto;padding:0px 10px;font-size:20px;margin:0 auto;background:#fff;font-weight: bold;
     position: relative;z-index: 1;line-height:30px ;
 }
 .card2{
-    width: 96%;height:auto;padding:0 10px;font-size:20px;margin:0 auto;background:#fff;margin-top:26px;  line-height: 30px;
+    width: 94%;height:auto;font-size:2rem;margin:0 auto;background:#f6f6f6;margin-top:26px;  line-height: 30px;
 }
 img[class=card2]{
     display:block;width: 100%;height:auto;font-size:16px;margin:0 auto;background:#fff;line-height: 25px;
