--- a/public/css/search.css
+++ b/public/css/search.css
@@ -127,11 +127,11 @@
 .sMore{
     width: 100%;height: auto;overflow: hidden;margin-top:14px
 }
-.sWeb{
+/*.sWeb{
     width:auto;height:auto;font-size: 12px;color:#297c29;float: left;
-}
+}*/
 .sFrom{
-    width:auto;height:auto;font-size: 12px;color:#297c29;float: left;margin-left: 40px;
+    width:auto;height:auto;font-size: 12px;color:#297c29;float: left;
 
 }
 .sTime{
