--- a/public/css/news.css
+++ b/public/css/news.css
@@ -1,7 +1,6 @@
 .clearfix:after {content:"."; display:block; height:0; visibility:hidden; clear:both; }
-.loadMord{width: 100%;height:44px;margin: 0px auto 0 auto;background: #f5f5f5;font-size:14px;color:#9b9b9b;text-align: center;line-height: 44px;display: none}
-
 .clearfix { *zoom:1; }
+.loadMord{width: 100%;height:44px;margin: 0px auto 0 auto;background: #f5f5f5;font-size:14px;color:#9b9b9b;text-align: center;line-height: 44px;}
 .floatL{float:left}
 .floatR{float: right}
 .related-idea a:hover{
@@ -21,25 +20,37 @@
 	color: inherit;
 }
 .related-idea{
-	width:94%;
+	width:100%;
 	margin: auto;
-	background-color: #ffffff;
-	border:1px solid #e9e9e9;
+	/*background-color: #ffffff;*/
+	/*border:1px solid #e9e9e9;*/
 	margin-top: 40px;
 	display: none;
 }
 .idea-title{
+	width:100%;
+	height:19px;
+	border-left: 4px solid #0091fa;
+	/*margin-left: 3%;*/
 	font-size: 17px;
-	color: #0086d1;
-	padding-left: 10px;
-	height: 40px;
-	line-height: 40px;
-	border-bottom:1px solid #e9e9e9;
+	color: #000;
+	padding-left: 2%;
+	/*height: 40px;*/
+	/*line-height: 40px;*/
+	/*border-bottom:1px solid #e9e9e9;*/
 }
+.idea-tabs{
+	width: 94%;height:auto;margin:15px auto 0 auto;overflow: hidden;
+}
+.idea-tab{
+	width:auto;height:auto;padding: 10px 12px;border: 1px solid #e5e5e5;border-radius: 3px;font-size: 14px;color:#0091fa;float: left;margin-left: 11px;
+}
+.idea-tab:first-child{margin-left: 0}
 .idea-infos{
 	padding-bottom: 10px;
 	position: relative;
-	overflow: hidden;
+	/*overflow: hidden;*/
+	margin-top: 15px;
 }
 .idea-info:first-child{
 	margin-top: -60px;
@@ -136,59 +147,85 @@
 	position: relative;
 }
 .elte-comments{
-	width:94%;
+	width:100%;
 	margin: auto;
-	background-color: #ffffff;
-	border:1px solid #e9e9e9;
-	margin-top: 22px;
+
+	margin-top: 7px;
+}
+.comments{
+	margin-top:12px;
 }
 .comments-title{
-	height: 40px;
-	line-height: 40px;
-	font-size: 1.5rem;
-	color:#0086d1;
-	padding-left: 2%;
+	width:100%;
+	height: 19px;
+	border-left:4px solid #0091fa;
+	line-height: 19px;
+	font-size: 1.8rem;
+	color:#1a1a1a;
+	padding-left: 3%;
 }
 .comments-more{
-	height: 47px;
-	line-height: 47px;
+	width:90%;
+	margin:0 auto;
+	height: auto;
+	background: #0091fa;
+	border-radius: 47px;
+	line-height: 20px;
 	font-size: 1.5rem;
-	color:#0086d1;
-	padding-left: 2%;
+	color:#fff;
+	padding: 13px 12%;
 	text-align: center;
-	border-top:1px solid #e9e9e9;
+	overflow: hidden;
+	/*background: red;*/
+}
+.qidianMore{
+	width:7%;height:auto;display: inline-block;
+}
+.qidianMore>img{
+	width:100%
+}
+.reping{
+	width:auto;font-size: 1.5rem;color: #ffffff;line-height: 18px;display: inline-block;
+}
+.qidianGo{
+	width:3%;height:auto;display: inline-block;
+}
+.qidianGo>img{
+	width:100%;
 }
 .comment{
-	width: 100%;
+	width: 94%;
 	margin-left: auto;
 	margin-right: auto;
-	padding-left: 2%;
-	padding-right: 2%;
 	padding-top: 15px;
-	border-top:1px solid #e9e9e9;
+	border-top:1px solid #e0e0e0;
+}
+.comment:first-child{
+	border:0;
 }
 .comment-img{
-	width: 2.5rem;
-	height: 2.5rem;
+	width: 3rem;
+	height: 3rem;
 	border-radius: 50%;
 	overflow: hidden;
 	float: left;
 }
 .comment-img img{
-	width: 100%;
+	height: 100%;
 }
 .comment-info{
-	width:-moz-calc(99% - 25px);
-	width:-webkit-calc(99% - 25px);
-	width: calc(99% - 25px);
+	width:-moz-calc(95% - 30px);
+	width:-webkit-calc(95% - 30px);
+	width: calc(95% - 30px);
 	float: left;
-	margin-left: 1%;
+	margin-left: 10px;
+	margin-top:2px;
 	padding-bottom: 16px;
 }
 .user-info .user-name{
-	font-size: 1.5rem;
-	color: #5d5d5d;
-	line-height: 21px;
+	font-size: 1.4rem;
+	color: #47494c;
+	line-height: 18px;
 }
 .user-info .user-time{
 	font-size: 1.2rem;
@@ -197,14 +234,59 @@
 }
 .user-info .floatR{
 	line-height: 23px;
-	font-size: 1.2rem;
+	font-size: 1.4rem;
+	color:#8d8d8d;
 }
 .user-info .floatR img{
 	height: 13px;
 	vertical-align: middle;
 }
 .comment-text{
-	font-size: 1.6rem;
-	color: #060606;
-	margin-top: 11px;
+	font-size: 1.4rem;
+	color: #47404c;
+	margin-top: 7px;
+	line-height:2.5rem;
+}
+.infoBox{
+	width:94%;height:auto;margin:0px auto 0 auto;border-left: 1px dashed #b3b3b3;padding-left: 7px;padding-top: 1px;
+}
+.infoInnerbox{
+	width:100%;height:auto;border-bottom: 1px solid #e5e5e5;
+}
+.infoDatas{
+	width:100%;height:16px;margin-left: -3px;margin-top:10px
+}
+.infoBox:first-child>a>.infoDatas{
+	margin-top: -4px;
+}
+.infoCircle{
+	width:8px;height:8px;border:1px solid #b3b3b3;border-radius: 50%;display: inline-block;line-height: 14px;float: left;margin-top: 3px;margin-left: -8px;background: #f6f6f6;
+}
+.infoData{
+	width:auto;height:100%;padding: 2px;font-size: 12px;color: #fff;background: #0091fa;float: left;
+	margin-left: 7px;line-height: 14px;;
+}
+/*.infoDatas:first-child{*/
+	/*padding-to:-3px;*/
+/*}*/
+.infoInnerbox{
+	width: 100%;height:auto;padding: 6px 0 10px 0;overflow: hidden;
+}
+.infoTitle{
+	width:100%;height:auto;font-size: 16px;color:#1a1a1a;line-height: 22px;
+}
+.infoForm{
+	width: 100%;height:auto;font-size: 10px;color:#999;margin-top: 8px;
+}
+.year{
+	font-size: 13px;color:#0091fa;background:#f6f6f6 ;padding: 0;
+}
+.infoInnerL{
+	width:calc(100% - 100px);height:auto;float: left;
+}
+.infoInnerR{
+	width:81px;height:60px;float: right;
+}
+.infoInnerR>img{
+	width: 100%;
 }
