--- a/public/css/news.css
+++ b/public/css/news.css
@@ -32,7 +32,7 @@
 	height:19px;
 	border-left: 4px solid #0091fa;
 	/*margin-left: 3%;*/
-	font-size: 17px;
+	font-size: 1.8rem;
 	color: #000;
 	padding-left: 2%;
 	line-height: 19px;
