--- a/public/css/news.css
+++ b/public/css/news.css
@@ -1,5 +1,6 @@
 .clearfix:after {content:"."; display:block; height:0; visibility:hidden; clear:both; }
 .clearfix { *zoom:1; }
+a{text-decoration: none}
 .loadMord{width: 100%;height:44px;margin: 0px auto 0 auto;background: #f5f5f5;font-size:14px;color:#9b9b9b;text-align: center;line-height: 44px;}
 .floatL{float:left}
 .floatR{float: right}
