--- a/public/css/search.css
+++ b/public/css/search.css
@@ -46,7 +46,7 @@
     cursor:pointer;
 }
 .buttonBox{
-    width:46.88%;height:30px;margin:30px auto 80px auto;
+        text-align:center;height:30px;margin:30px auto 80px auto;display: none;
 }
 
 .buttonNum{
